--- a/WEBLesson_10/main.css
+++ b/WEBLesson_10/main.css
@@ -25,6 +25,50 @@ body{
 
 #topHeader{
 	background: yellow;
-	border: 1px solid white;
+	border: 1px solid green;
 	padding: 20px; 
+}
+#topMenu{
+	background: purple;
+	color: yellow;
+	
+}
+#topMenu li {
+	display: inline-block;
+	list-style: none;
+	padding: 5px;
+	font: bold 14px Tahoma;
+	
+}
+
+#mainSection {
+	float: left;
+	width: 660px;
+	margin: 30px; 
+	
+}
+#sideNews{
+	float: left;
+	width: 220px;
+	margin: 20px 0px;
+	padding: 30px;
+	background: green;
+	
+}
+#theFooter{
+	clear: both;
+	text-align: center;
+	padding: 20px;
+	border-top: 2px solid red;
+}
+article{
+	background: yellow;
+	border: 1px solid purple;
+	padding: 20px;
+	margin-bottom: 15px;
+	
+}
+article >footer {
+	text-align: right;
+	
 }
