--- a/WEBLesson_11/main.css
+++ b/WEBLesson_11/main.css
@@ -48,6 +48,8 @@ body {
 	-webkit-box-flex: 1;
 	margin: 20px;
 	padding: 20px;
+	-webkit-box-ordinal-group: 1;
+	-webkit-box-flex: 10000;
 }
 #sideNews {
 	border: 1px solid red;
@@ -55,6 +57,8 @@ body {
 	margin: 20px 0px;
 	padding: 30px;
 	background: purple;
+	-webkit-box-ordinal-group: 2;
+	-webkit-box-flex: 2;
 }
 #theFooter {
 	text-align: center;
