--- a/WEBLesson_12/mainpt3.css
+++ b/WEBLesson_12/mainpt3.css
@@ -3,14 +3,19 @@ body {
 }
 #box {
 	font-size: 30px;
-	display: box;
+	border: 3px solid purple;
+	/*outline: 3px solid green;*/
+	display: block;
 	margin: 150px auto;
 	color: white;
-	background: red;
+	/*background: -webkit-linear-gradient(right, black, white);*/
+	background: -webkit-radial-gradient(center, circle, red 0%, orange 80%);
 	width: 180px;
 	height: 80px;
 	-webkit-border-radius: 50px;
+	-webkit-box-shadow: rgb(110, 110, 110) 10px 8px 8px;
+	-webkit-transform: translate(-30px, -40px) rotate(45deg) scale(1, 2);
 }
 #box > p {
-	padding: 20px;
+	text-shadow: black 1px 1px 3px;
 }
